SolarCheck relevamiento, Blob, admin y ajustes UX

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
 # URL del Web App de Google Apps Script (recibir leads).
 # Obtener la URL después de desplegar el script en tu Google Sheet.
 LEAD_FORM_URL=https://script.google.com/macros/s/XXXXXXXX/exec
+
+# SolarCheck admin (relevamiento)
+ADMIN_USER=admin
+ADMIN_PASS=changeme
+
+# Vercel Blob: fotos del relevamiento (factura, techo, tablero). Obligatorio para que las fotos se guarden.
+# 1. En Vercel Dashboard → tu proyecto → Storage → Create Database → Blob.
+# 2. El token se añade automáticamente al proyecto. En local: vercel env pull
+BLOB_READ_WRITE_TOKEN=
