--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@turf/area": "^7.3.3",
     "@turf/helpers": "^7.3.3",
     "@types/leaflet": "^1.9.21",
+    "@vercel/blob": "^2.0.1",
     "leaflet": "^1.9.4",
     "next": "14.2.15",
     "react": "^18.3.1",
